fix(core): Tooltip is not rendered properly on active tab when perpetual (process loader) spinner is visible

--- a/src/app/core/workbox/workbox.component.scss
+++ b/src/app/core/workbox/workbox.component.scss
@@ -100,7 +100,6 @@
         }
 
         &.active, &.active:before, &.active:after {
-            z-index: 1;
             color: $layout-text-color;
             background: $panel-bg;
         }
